2011-03-11  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes in viewer.

	* demo/viewer/main.cc: Add more includes.

	* demo/viewer/viewer.cc: Add debug output.

2011-03-04  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/io/xml/internal/extended_page_xml_visitor.hh: Save
	separators data.

2011-03-04  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/io/xml/internal/full_xml_visitor.hh: Do not copy image
	data.

2011-03-04  Guillaume Lazzara  <z@lrde.epita.fr>

	Make OCR step optional in viewer.

	* demo/viewer/Makefile.am: Add new files.

	* demo/viewer/config.cc,
	* demo/viewer/config.hh: Add OCR settings.

	* demo/viewer/toolchain_options.cc,
	* demo/viewer/toolchain_options.hh,
	* demo/viewer/toolchain_options.ui: Remove.

	* demo/viewer/ocr_options.cc,
	* demo/viewer/ocr_options.hh,
	* demo/viewer/ocr_options.ui,
	* demo/viewer/preprocessing_options.cc,
	* demo/viewer/preprocessing_options.hh,
	* demo/viewer/preprocessing_options.ui,
	* demo/viewer/segmentation_options.cc,
	* demo/viewer/segmentation_options.hh,
	* demo/viewer/segmentation_options.ui: New option widgets.

	* demo/viewer/preferences_dialog.cc: Insert new widgets.

	* demo/viewer/runner.cc: Take OCR settings into account.

2011-03-04  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/toolchain/internal/content_in_doc_functor.hh: Make OCR
	step optional.

2011-03-03  Guillaume Lazzara  <z@lrde.epita.fr>

	Compress image data in XML output.

	* scribo/io/xml/internal/full_xml_visitor.hh,
	* scribo/io/xml/load.hh: Here.

2011-03-03  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes in Scribo.

	* scribo/convert/from_base64.hh: Remove guards HAVE_QT.

	* scribo/core/document.hh: Initialize ImageMagick.

	* scribo/io/xml/internal/html_markups_replace.hh: Remove. Move code...
	* scribo/core/line_info.hh: ... here.

	* scribo/core/line_links.hh: Make use of is_textline method.

	* scribo/core/paragraph_info.hh: Add nlines method.

	* scribo/core/paragraph_set.hh: Add a construction routine using a